[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-who"
version = "0.5.0"
description = "Find out who really knows your code. Expertise analysis, bus factor, and reviewer suggestions from git history."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "git-who contributors" },
]
keywords = ["git", "code-ownership", "bus-factor", "expertise", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
git-who = "git_who.cli:main"

[project.urls]
Homepage = "https://github.com/trinarymage/git-who"
Repository = "https://github.com/trinarymage/git-who"
Issues = "https://github.com/trinarymage/git-who/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["git_who"]
